@@ -344,7 +344,8 @@ cdm_DFI* cdm_DFI::WriteInit(const MPI_Comm comm,
                             const int head[3],
                             const int tail[3],
                             const std::string hostname,
-                            const CDM::E_CDM_ONOFF TSliceOnOff)
+                            const CDM::E_CDM_ONOFF TSliceOnOff,
+                            const int* iblank)
 {
 
   // float型をdouble型に変換してdouble版WriteInit関数を呼ぶ
@@ -372,7 +373,8 @@ cdm_DFI* cdm_DFI::WriteInit(const MPI_Comm comm,
                    head, 
                    tail, 
                    hostname,
-                   TSliceOnOff);
+                   TSliceOnOff,
+                   iblank);
 
 }
 
@@ -395,7 +397,8 @@ cdm_DFI* cdm_DFI::WriteInit(const MPI_Comm comm,
                             const int head[3],
                             const int tail[3],
                             const std::string hostname,
-                            const CDM::E_CDM_ONOFF TSliceOnOff)
+                            const CDM::E_CDM_ONOFF TSliceOnOff,
+                            const int* iblank)
 {
 
 //FCONV 20140131.s
@@ -455,6 +458,7 @@ cdm_DFI* cdm_DFI::WriteInit(const MPI_Comm comm,
     out_Process.RankList[RankID].VoxelSize[i]=tail[i]-head[i]+1;
   }
 
+  out_domain.iblank = iblank;
   for(int i=0; i<3; i++) {
     out_domain.GlobalVoxel[i]  = G_size[i];
     out_domain.GlobalDivision[i] = division[i];
